se obtienen y se muestran los pokemones en el rv, se obtine y se muestra la info del pokemon en la pantalla de detalle, se muestra la imagen, se esta trabajando sobre el paginado

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,22 @@
     tools:context=".ui.home.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPokemons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/pokemon_card_item"/>
+
+    <ProgressBar
+        android:id="@+id/pbLoadPokemons"
+        style="?android:attr/progressBarStyle"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rvPokemons" />
 </androidx.constraintlayout.widget.ConstraintLayout>
