--- a/app/src/main/res/layout/pokemon_card_item.xml
+++ b/app/src/main/res/layout/pokemon_card_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/ivPokemon"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@color/P_Dark"
+            android:background="@color/P_Light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
